git commit -m "added more test pages"

--- a/guru99/data/configs.yaml
+++ b/guru99/data/configs.yaml
@@ -1,3 +1,7 @@
 url: http://demo.guru99.com/V4/index.php
 username: mngr254844
-password: ArUbUpa
+password: 222$
+
+accounts: 
+  - 77292
+  - 77295
